[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/game/Game.gd" type="Script" id=1]
[ext_resource path="res://source/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/camera/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/game/Background.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 283.204, 886.753 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
anchor_mode = 0
current = true

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="shot_fired" from="Player" to="." method="_on_Player_shot_fired"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
